# ble_dual_role

./: Cargo.toml
src/: central.rs  constants.rs  main.rs  peripheral.rs
